изменение public url

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "SuflerFun",
-  "name": "SuflerFun",
+  "short_name": "",
+  "name": "",
   "icons": [
     {
       "src": "logo16.png",
