использование requestAnimationFrame вместо setInterval
- переписано на requestAnimationFrame;
- изменена разметка таблиц информации о тексте и времени.

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "",
-  "name": "",
+  "short_name": "SuflerFun",
+  "name": "SuflerFun",
   "icons": [
     {
       "src": "logo16.png",
